<resources>
  <string name="app_name">OperationRobot</string>
  <string name="login_phone_hint">请输入手机号码</string>
  <string name="login_phone_toast">请输入手机号码</string>
  <string name="login_pwd_hint">请输入登录密码</string>
  <string name="login_forget_pwd">忘记密码</string>
  <string name="login">登录</string>
  <string name="login_create_accound">创建账号</string>
  <string name="socket_connect_fail">未连接成功</string>

  <string name="profile_action">Tinode profile</string>
  <string name="view_profile">View Profile</string>
  <string name="tinode_message">Send Tinode message</string>


  <string name="notification_channel_name">New mesage</string>
  <string name="notification_channel_description">New message was received</string>

  <string name="default_attachment_name">tinode_file_attachment</string>
  <string name="download_attachment">save</string>


  <string name="error_login_failed">Login failed</string>


  <string name="time_yesterday">昨天</string>
  <string name="time_day">日</string>
  <string name="time_month">月</string>
  <string name="time_year">年</string>
  <string name="time_more">99+</string>
  <string name="regex"><![CDATA[*&^%$]]></string>
  <string name="server_phone">028-23658965</string>
</resources>
